[package]
name = "rust-async-http"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
log = { version = "0.4", features = [ "max_level_info", "release_max_level_info" ] }
simple_logger = "1.13"

